# tensorforge

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Lexer.cpp.5D5B8829B2C03407.idx  Parser.cpp.8ADE5BD1F4DA32D4.idx  tensorforge.cpp.9F220AEB41824AF1.idx
include/TensorForge/Frontend/: AST.h  Diagnostic.h  Lexer.h  Parser.h  Token.h  TokenMacros.h  Typing.h
lib/Frontend/: ASTDumpers.cpp  CMakeLists.txt  Lexer.cpp  Parser.cpp  Typing.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Frontend/: functions.tf  indentation.tf  keywords.tf
test/Lexer/: basic_tokens.tf  edge_cases.tf  keywords.tf  literals.tf  operators.tf
test/Parser/: basic_function.tf
test/unit/: CMakeLists.txt
test/unit/Frontend/: TokenTest.cpp
tools/: CMakeLists.txt
tools/tensorforge/: CMakeLists.txt  tensorforge.cpp
unittests/: CMakeLists.txt
unittests/Frontend/: TokenTest.cpp
